--- a/pom.xml
+++ b/pom.xml
@@ -117,6 +117,11 @@
 			<version>3.10</version>
 		</dependency>
 
-     
+      <dependency>
+           <groupId>com.sikulix</groupId>
+           <artifactId>sikulixapi</artifactId>
+           <version>1.1.0</version>
+     </dependency>
+        
 	</dependencies>
 </project>
