--- a/pom.xml
+++ b/pom.xml
@@ -123,5 +123,11 @@
            <version>1.1.0</version>
      </dependency>
         
-	</dependencies>
+     
+    <dependency>
+           <groupId>mysql</groupId>
+           <artifactId>mysql-connector-java</artifactId>
+           <version>8.0.19</version>
+    </dependency>
+</dependencies>
 </project>
