--- a/test-output/old/NopCommerce Suite/Firefox Test.properties
+++ b/test-output/old/NopCommerce Suite/Firefox Test.properties
@@ -1,1 +1,1 @@
-[SuiteResult context=IE Test][SuiteResult context=Chrome Test][SuiteResult context=Firefox Test]
+[SuiteResult context=Chrome Test][SuiteResult context=IE Test][SuiteResult context=Firefox Test]
